header and footer

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <!-- Google font -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css"/>
+  <!-- Slick -->
+  <link type="text/css" rel="stylesheet" href="/assets/css/slick.css"/>
+  <link type="text/css" rel="stylesheet" href="/assets/css/slick-theme.css"/>
+  <!-- nouislider -->
+  <link type="text/css" rel="stylesheet" href="/assets/css/nouislider.min.css"/>
+  <!-- Font Awesome Icon -->
+  <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+  <!-- Custom stlylesheet -->
+  <link type="text/css" rel="stylesheet" href="/assets/css/style.css"/>
+
 </head>
 <body>
+
   <app-root></app-root>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
